- Tasks: Added pagination to the category select combobox
- Fixed AbstractController::getRoute() function with namespaces.
- Accept YYYYMMDD format when importing vCard with birthdays
- If fs/Folder fails to copy (because destination might be inside source folder) the already created folder record will be deleted 
- Added clarification for CalDAV tasklist sync to the settings->synchronization panel
- Calendar: fixed warning message for the event accept external page
- Site module: Fixed some namespace problems that broke the site treepanel
- Saving ProjectV2 TaskGrid will submit all grid data else the grouping functionality will break

28-10-2014 6.0.33
- Sorting users respects sort of name order
- Billing, added functionality for multiple payments per order. This update will also convert existing payed orders to the new method.
- Billing: Fixed display problem of costcode combos: Changed displaying "code" instead of "name" in the combo
- Fixed problem with attachments in the \tmp\attachments\ folder that didn't get removed after sending an email from a mime source

23-10-2014 6.0.32
- Nexus sends no search folder. We default to inbox search now.
- Sieve rules parser updated
- Address Book & Custom Fields: fixed advanced searching Treeselect custom fields in Address Book.
- The tasks shown in the calendar will use the start time of the task
- permissions of key.txt invalid after fresh install
- Added full text search option to quick search
- Billing: Fixed menu item New > Invoice/Quote.
- Projects2: Template Events of type "job", "task" and "project".
- Brought back amavis anti spam and anti virus solution for mailserver.

20-10-2014 6.0.31
- Fixed quota calculcation for mailserver
- Fix for self referencing constant
- Projects2 : Return of the Action (a.k.a. Task Template, a.k.a. Template Event) of type Project.
- Fix for Excel HEAD request "Microsoft Office Existence Discovery": respond with 501 Not Implemented.